# tap-mapper

./: README.md  pyproject.toml
tap_mapper/: __init__.py  plugin.py  tap_model.py  tap_pass_grb.py  ts_algos.py
tap_mapper/tests/: test_all.py  test_plugin.py  test_tap_mapper.py  test_ts.py
